src/modules/addons/enom_pro/css/admin.less
/* ... */
/**
Top level DOM items
**/
#tooltip {
	position: absolute;
	z-index: 3000;
	/*+border-radius:4px;*/
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	-khtml-border-radius: 4px;
	border-radius: 4px;
	/*+box-shadow:0px 0px 10px #000;*/
	-moz-box-shadow: 0px 0px 10px #000000;
	-webkit-box-shadow: 0px 0px 10px #000000;
	-o-box-shadow: 0px 0px 10px #000000;
	box-shadow: 0px 0px 10px #000000;
	border: 1px solid #111111;
	background-color: #eeeeee;
	padding: 5px;
}

#tooltip H3, #tooltip DIV {
	margin: 0;
}

#tooltip.viewport-right {
	margin-left: 715px;
}

#enom_pro_dialog_iframe {
	width: 100%;
	height: 100%;
	border: none;
}

//WHMCS V6 Tweaks

.contentarea {
	.enom_pro_output {
		min-height: 600px;
	}
	.widget-content {
		.enom_pro_output {
			min-height: inherit;
		}
	}
}

/**Swiftmods admin tweaks */
.content-container {
	overflow: auto;
	.enom_pro_output {
		table th {
			color: #ffffff;
		}
	}
}

/**END Swiftmods admin tweaks */

/** Whmcs V4 Tweaks */
#content_container {
	.enom_pro_output {

		.btn {
			transition: none;
			-webkit-transition: none;
		}
		.btn:hover {
			background-position: inherit;
		}
	}
	#left_side .enom_pro_output.sidebar {
		.header {
			background-color: #888888;
			border-radius: 15px 15px 0 0;
			background-image: none;
			box-sizing: border-box;
		}
		* {
			box-sizing: border-box;
			width: 100%;
		}

	}
	//Display inline in the admin roles page
	.fieldarea .enom_pro_output .enom_pro_widget_title {
		display: inline;
	}
}

#sidebar .enom_pro_output .upgradeAlertHidden a {
	box-sizing: border-box;
}

#whmcsdevbanner {
	display: none !important;
}

/**
Help Dialog */
#helpDialogContent {
	overflow-y: auto;
	overflow-x: hidden;
	width: 100%;
	.content {
		li {
			font-size: 1.2rem;
		}
		ol li {
			list-style: decimal;
		}
	}
	h1,
	h2,
	h3,
	h4 {
		height: inherit;
		line-height: 1.3rem;
		font-size: 1.3rem;
		margin: 0 0 .5rem 0;
		border-bottom: 1px solid #dddddd;
	}
}

